# toillprat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_app.py  test_auth.py
toillprat/: auth.py  main.py
toillprat/web/: app.js  index.html  styles.css
