[project]
name = "toillprat"
version = "0.0.0" # the released version is the git tag; semantic-release owns it
description = "A small, tablet-friendly character chat app"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest is built on assert.
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
